# Reflectable

./: .gitignore  CMakeLists.txt  Reflectable.sln
Reflectable/: CMakeLists.txt  Class.h  ClassBuilder.h  ClassManager.cpp  ClassManager.h  Main.cpp  Reflectable.vcxproj  Reflectable.vcxproj.filters  ReflectableType.h  Reflection.h  TestClass.cpp  TestClass.h
